--- a/2014-03-21/index.html
+++ b/2014-03-21/index.html
@@ -19,6 +19,10 @@
   		<h3>Link :</h3>
   		<p style="position:relative;left:40px"> 
   			<a href="http://it.wikipedia.org/wiki/Pantheon_(Roma)">Introduzione al Pantheon</a><br>
+        <a href="http://www.laboratorioroma.it/ALR/Pantheon/Pantheon.htm">La Storia</a><br>
+        <a href="http://digicoll.library.wisc.edu/cgi-bin/DLDecArts/DLDecArts-idx?type=article&did=DLDECARTS.ANCBUILD.I0022&id=DLDecArts.AncBuild&isize=M">Planimetria</a><br>
+        <a href="http://www.virginia.edu/president/kenanscholarship/work/archive_files/penley_chiang/Images/Syntax/html_s/Rotunda%20-%20column%20condition.htm">Le colonne</a><br>
+        <a href="http://www.uninfonews.it/lintero-universo-contenuto-una-sfera/">Sezione del Pantheon</a><br>
   		</p>
   	</div>
   	<div class="description" align="left">
@@ -30,11 +34,11 @@
   	<div class="images">
   		<h3>Immagini :</h3>
   		<p style="position:relative;left:40px">
-  			<img src="images/davanti.jpg" width="200" height="200"/>
-  			<img src="images/dentro.jpg" width="200" height="200"/>
-  			<img src="images/pianta1.jpg" width="200" height="200"/>
-  			<img src="images/pianta2.jpg" width="200" height="200"/>
-  			<img src="images/skatch.jpg" width="200" height="200"/>
+  			<img src="images/davanti.jpg"/>
+  			<img src="images/dentro.jpg"/>
+  			<img src="images/pianta1.jpg"/>
+  			<img src="images/pianta2.jpg"/>
+  			<img src="images/skatch.jpg"/>
   		</p>
   	</div>
   	<div class="exlinks">
