--- a/2014-03-21/index.html
+++ b/2014-03-21/index.html
@@ -28,7 +28,9 @@
   	<div class="description" align="left">
   		<h3>Descrizione :</h3>
   		<p style="position:relative;left:40px">
-  			bla bla bla bla
+  			Il Pantheon (dal greco Πάνθεον [ἱερόν] Pántheon [hierón], "[tempio] di tutti gli dei") è un edificio di Roma antica, costruito come tempio dedicato a tutte le divinità passate, presenti e future. Gli abitanti di Roma lo chiamano amichevolmente la Rotonna, o Ritonna[1] ("la Rotonda"), da cui anche il nome della piazza antistante. Fu fatto ricostruire dall'imperatore Adriano tra il 118 e il 128 d.C., dopo che gli incendi del 80 e del 110 d.C. avevano danneggiato la costruzione precedente di età augustea.
+        L’edificio del Pantheon è inscrivibile in una sfera perfetta. L'altezza dell'edificio è uguale al suo diametro e misura 43,44 m per 43,44 m. Questa caratteristica risponde a criteri classici di architettura equilibrata e stabile. Nel Pantheon questi principi sono sintetizzati dall’armonia delle linee e dal calcolo perfetto delle geometrie delle masse.
+        All'inizio del VII secolo il Pantheon è stato convertito in basilica cristiana, chiamata Santa Maria della Rotonda[2], o Santa Maria ad Martyres, il che gli ha consentito di sopravvivere quasi integro alle spoliazioni apportate agli edifici della Roma classica dai papi. Gode del rango di Basilica minore ed è l'unica basilica di Roma oltre a quelle patriarcali ad avere ancora il Capitolo.
   		</p>
   	</div>
   	<div class="images">
