--- a/2014-03-21/index.html
+++ b/2014-03-21/index.html
@@ -36,11 +36,22 @@
   	<div class="images">
   		<h3>Immagini :</h3>
   		<p style="position:relative;left:40px">
+        <img src="images/planimetria.jpg"/>
   			<img src="images/davanti.jpg"/>
   			<img src="images/dentro.jpg"/>
   			<img src="images/pianta1.jpg"/>
   			<img src="images/pianta2.jpg"/>
-  			<img src="images/skatch.jpg"/>
+  			<img src="images/1.jpg"/>
+        <img src="images/2.jpg"/>
+        <img src="images/3.jpg"/>
+        <img src="images/4.jpg"/>
+        <img src="images/5.jpg"/>
+        <img src="images/6.jpg"/>
+        <img src="images/7.jpg"/>
+        <img src="images/8.jpg"/>
+        <img src="images/9.jpg"/>
+        <img src="images/10.jpg"/>
+        <img src="images/11.jpg"/>
   		</p>
   	</div>
   	<div class="exlinks">
