--- a/2014-04-11/index.html
+++ b/2014-04-11/index.html
@@ -52,6 +52,9 @@
         <img src="images/9.jpg"/>
         <img src="images/10.jpg"/>
         <img src="images/11.jpg"/>
+        <img src="images/bus-shelter.jpg"/>
+        <img src="images/StreetLamp.jpg"/>
+        <img src="images/windows.jpg"/>
   		</p>
   	</div>
   	<div class="exlinks">
