--- a/2014-05-16/index.html
+++ b/2014-05-16/index.html
@@ -26,6 +26,7 @@
   		<p style="position:relative;left:40px">
         <img src="images/planimetria.jpg"/>
   			<img src="images/altezza.jpg"/>
+        <img src="images/apartment.png"/>
   		</p>
   	</div>
   	<div class="exlinks">
