--- a/2014-05-16/index.html
+++ b/2014-05-16/index.html
@@ -18,15 +18,22 @@
   	<div class="description" align="left">
   		<h3>Descrizione :</h3>
   		<p style="position:relative;left:40px">
-  			Ho fatto bla bla bla
+        Il primo passo per la realizzazione di questo progetto è stata la ricerca della planimetria del mio appartamento, una volta ottenuta e conosciute le misure è stato possibile iniziare a realizzare il modello in 3D della casa.
+        Nel primo esercizio ho realizzato il modello in 3d del mio appartamento, iniziando con un diagramma master e successivamente aggiungendo ade esso sempre più celle(stanza) della mia casa, una volta terminata l'infrastruttura mi sono dedicato a porte e finestre.
+        Terminato il primo esercizio con la realizzazione dell'appartamento è stato semplice poi a partire da esso realizzare anche gli appartementi adiacenti.
+        Una volta terminati gli appartamenti sono stati aggiunti anche il tetto, l'ascensore e un piano terra che si differenzia dagli altri per la mancanza di balconi e finestre.
+        L'ultimo passo per completare anche il secono esercizio è stata la realizzazione di un terreno al di sotto l'edificio, ma grazie alla libreria spline.py è stato possibile realizzarlo.
+  			Una volta assemblati tutti i pezzi si ottiene l'edificio al completo che poggierà su una lieve collina.
+        L'esercizio 3 è stato risolto mediante la programmazione di una funzione "VMR_CELL" che semplifica il lavoro di inserimento e di eliminazione delle celle di un diagramma master. Questo metodo è stato utilizzato spesso per la realizzazione dell modello dell'appartamento nell'esercizio 1, e si può vedere come questo semplifica il lavoro osservano le poche linee di codice scritte.
   		</p>
   	</div>
   	<div class="images">
   		<h3>Immagini :</h3>
-  		<p style="position:relative;left:40px">
-        <img src="images/planimetria.jpg"/>
-  			<img src="images/altezza.jpg"/>
-        <img src="images/apartment.png"/>
+  		<p style="position:relative;left:40px;">
+        <img src="images/planimetria.jpg" style="max-height:600px;max-width:600px"/>
+  			<img src="images/altezza.jpg" style="max-height:600px;max-width:600px"/>
+        <img src="images/apartment.png" style="max-height:600px;max-width:600px"/>
+        <img src="images/building.png" style="max-height:600px;max-width:600px"/>
   		</p>
   	</div>
   	<div class="exlinks">
@@ -34,6 +41,8 @@
   		<p style="position:relative;left:40px">
   			<a href="python/exercise1.py">Esercizio 1</a><br>
   			<a href="python/exercise2.py">Esercizio 2</a><br>
+        <a href="python/exercise3.py">Esercizio 3</a><br>
+        <a href="python/exercise4.py">Esercizio 4</a><br>
   		</p>
   	</div>
   </body>
