--- a/2014-05-16/index.html
+++ b/2014-05-16/index.html
@@ -34,6 +34,8 @@
   			<img src="images/altezza.jpg" style="max-height:600px;max-width:600px"/>
         <img src="images/apartment.png" style="max-height:600px;max-width:600px"/>
         <img src="images/building.png" style="max-height:600px;max-width:600px"/>
+        <img src="images/stairs.png" style="max-height:600px;max-width:600px"/>
+        <img src="images/edificio_finale.png" style="max-height:600px;max-width:600px"/>
   		</p>
   	</div>
   	<div class="exlinks">
